--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 streamlit>=1.17.0
 nltk>=3.8.0
 scikit-learn>=1.1.3
-string
-random
+PyPDF2==1.26.0
+transformers==4.11.2
+numpy==1.21.3
+torch==1.9.1
