--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit>=1.17.0
-nltk>=3.8.0
-scikit-learn>=1.1.3
-PyPDF2==1.26.0
-transformers==4.11.2
-numpy==1.21.3
-torch==1.9.1
-PyMuPDF==1.18.17
+streamlit>=1.28.1
+nltk>=3.8.1
+scikit-learn>=1.3.2
+PyPDF2==3.0.1
+transformers==4.35.2
+numpy==1.26.1
+torch>=2.1.1
+PyMuPDF==1.23.7
